<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_canhan"
            android:icon="@drawable/canhan"
            android:title="@string/ca_nhan" />
        <item
            android:id="@+id/nav_danhmuc"
            android:icon="@drawable/danhmuc"
            android:title="@string/d_m" />
        <item
            android:id="@+id/nav_baohiem"
            android:icon="@drawable/baohiem"
            android:title="@string/b_h" />
        <item
            android:id="@+id/nav_tinhluong"
            android:icon="@drawable/tinhluong"
            android:title="@string/tinh_luong" />
        <item
            android:id="@+id/nav_chamcong"
            android:icon="@drawable/chamcong"
            android:title="@string/c_cong" />
        <item
            android:id="@+id/nav_nhansu"
            android:icon="@drawable/nhansu"
            android:title="@string/nhan_su" />
        <item
            android:id="@+id/nav_tuyendung"
            android:icon="@drawable/tuyendung"
            android:title="@string/tuyen_dung" />
        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/alarm"
            android:title="@string/alarm" />
    </group>

</menu>