<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frm_timelog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp"

    >
    <LinearLayout
        android:id="@+id/lnTimeLog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00BCD4"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_line"
            android:gravity="center"
            android:text="@string/tv_maycham"
            android:textColor="#000000">

        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_line"
            android:gravity="center"
            android:text="@string/tv_macham"
            android:textColor="#000000" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_line"
            android:gravity="center"
            android:text="@string/tv_thoigiancham"
            android:textColor="#000000" />
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_chamcong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_timelogcanhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_line">
        </androidx.recyclerview.widget.RecyclerView>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</LinearLayout>
